[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenery/ParallaxBackground.gd" type="Script" id=1]
[ext_resource path="res://sprites/Landscape.png" type="Texture" id=3]

[node name="ParallaxBackground" type="ParallaxBackground"]
offset = Vector2( 0, -112 )
transform = Transform2D( 1, 0, 0, 1, 0, -112 )
script = ExtResource( 1 )

[node name="Sky_Layer" type="ParallaxLayer" parent="."]
z_as_relative = false
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 400, 675 )

[node name="Sprite" type="Sprite" parent="Sky_Layer"]
texture = ExtResource( 3 )
centered = false
vframes = 6

[node name="Cloud_Layer" type="ParallaxLayer" parent="."]
z_as_relative = false
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 400, 0 )

[node name="Landscape" type="Sprite" parent="Cloud_Layer"]
z_as_relative = false
texture = ExtResource( 3 )
centered = false
vframes = 6
frame = 1

[node name="Mountain_Layer_Far" type="ParallaxLayer" parent="."]
z_as_relative = false
motion_scale = Vector2( 0.1, 0 )
motion_mirroring = Vector2( 400, 0 )

[node name="Landscape" type="Sprite" parent="Mountain_Layer_Far"]
z_as_relative = false
texture = ExtResource( 3 )
centered = false
vframes = 6
frame = 2

[node name="Mountain_Layer2" type="ParallaxLayer" parent="."]
z_as_relative = false
motion_scale = Vector2( 0.15, 0 )
motion_mirroring = Vector2( 400, 0 )

[node name="Landscape" type="Sprite" parent="Mountain_Layer2"]
z_as_relative = false
texture = ExtResource( 3 )
centered = false
vframes = 6
frame = 3

[node name="Island_Layer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.2, 0 )
motion_mirroring = Vector2( 400, 0 )

[node name="Landscape" type="Sprite" parent="Island_Layer"]
texture = ExtResource( 3 )
centered = false
vframes = 6
frame = 4

[node name="Forest_Layer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.25, 0 )
motion_mirroring = Vector2( 400, 0 )

[node name="Landscape" type="Sprite" parent="Forest_Layer"]
texture = ExtResource( 3 )
centered = false
vframes = 6
frame = 5
